# comp0035-2024-tutorials

./: .gitignore  README.md  df3  dyq.py  pyproject.toml  requirements.txt  temp.py
.github/workflows/: python-app.yml
activities/: comp0035-tutorial1.md  comp0035-tutorial2.md  comp0035-tutorial3-4.md  comp0035-tutorial4-5.md  comp0035-tutorial6.md  comp0035-tutorial7.md  comp0035-tutorial8.md  comp0035-tutorial9.md
activities/files/: wireframes.pptx
activities/week1/: 0-computer_setup_comp0035.md  1-0-instructions.md  1-1-create-repository-github.md  1-2-create-repository-github-classroom.md  1-3-create-repository-fork.md  1-4-find-repository.md  1-5-integrate-IDE-github.md  1-6-clone-repository.md  1-7-create-virtual-environment.md  1-8-synch-changes.md  temp1.py
activities/week2/: 2-0-instructions.md  2-01-python-structure.md  2-02-pandas-open.md  2-03-pandas-describe.md  2-04-pandas-datatypes.md  2-05-pandas-joining-dataframes.md  2-06-pandas-removing-columns.md  2-07-pandas-missing-values.md  2-08-pandas-categorical-data.md  2-09-pandas-new-column.md  2-1-python-structure.md  2-10-further-practice.md  2-10-save-df-to-file.md  2-11-further-practice.md  2-2-pandas-open.md  2-3-pandas-describe.md  2-4-pandas-datatypes.md  2-5-pandas-joining-dataframes.md  2-6-pandas-removing-columns.md  2-7-pandas-missing-values.md  2-8-pandas-categorical-data.md  2-9-pandas-new-column.md  2-9-save-df-to-file.md
activities/week3/: 3-0-instructions.md  3-1-plot-overview.md  3-2-distribution.md  3-3-outliers.md  3-4-timeseries.md  3-5-chart-styling.md  3-6-lint.md  (+1 more)
src/: dataprepartion.py
tests/: conftest.py  test_data_prep.py  test_queries.py
(+103 files in other folders)
